--- a/docs/content/operator/node-tools.mdx
+++ b/docs/content/operator/node-tools.mdx
@@ -34,7 +34,7 @@ This tool only supports pending validators and active validators at the moment.
 
 3. Run the following command to set up your IOTA account and CLI environment. 
 
-    1. If this is the first time running this program, it will ask you to provide a IOTA Fullnode Server URL and a meaningful environment alias. It will also generate a random key pair in `iota.keystore` and a config `client.yaml`. Swap in your validator account key if you already have one.
+    1. If this is the first time running this program, it will ask you to provide an IOTA Fullnode Server URL and a meaningful environment alias. It will also generate a random key pair in `iota.keystore` and a config `client.yaml`. Swap in your validator account key if you already have one.
 
     2. If you already set it up, simply make sure 
       a. `rpc` is correct in `client.yaml`. 
