--- a/docs/content/operator/validator-config.mdx
+++ b/docs/content/operator/validator-config.mdx
@@ -1,6 +1,6 @@
 ---
 title: IOTA Validator Node Configuration
-description: Learn how to set up, configure, and manage a IOTA Validator node, including staking, reference gas price, and tallying rules.
+description: Learn how to set up, configure, and manage an IOTA Validator node, including staking, reference gas price, and tallying rules.
 ---
 
 import StakingPoolReqs from "../_snippets/staking-pool-reqs.mdx";
@@ -9,9 +9,9 @@ Validators on the IOTA network run special nodes and have additional tasks and r
 
 ## Requirements to run a validator on IOTA 
 
-To run a IOTA validator, you must set up and configure a IOTA Validator node. After you have a running node, you must have a minimum of 30 million IOTA in your staking pool to join the validator set on the IOTA network.
+To run an IOTA validator, you must set up and configure an IOTA Validator node. After you have a running node, you must have a minimum of 30 million IOTA in your staking pool to join the validator set on the IOTA network.
 
-To learn how to set up and configure a IOTA Validator node, see [IOTA for Node Operators](https://github.com/iotaledger/iota/blob/main/nre/iota_for_node_operators.md) on GitHub. The guide includes all of the information you need to configure your Validator node. It also provides guidance on the tasks you must perform after you join the validator set.
+To learn how to set up and configure an IOTA Validator node, see [IOTA for Node Operators](https://github.com/iotaledger/iota/blob/main/nre/iota_for_node_operators.md) on GitHub. The guide includes all of the information you need to configure your Validator node. It also provides guidance on the tasks you must perform after you join the validator set.
 
 Specific steps you must take include:
 
@@ -28,7 +28,7 @@ Specific steps you must take include:
 
 ## Hardware requirements to run a Validator node
 
-Suggested minimum hardware specifications to run a IOTA Validator node:
+Suggested minimum hardware specifications to run an IOTA Validator node:
 
 - CPU: 24 physical cores (or 48 virtual cores)
 - Memory: 128 GB
