fix(devx): added identity icon

--- a/docs/content/developer/iota-identity/contact.mdx
+++ b/docs/content/developer/iota-identity/contact.mdx
@@ -2,7 +2,7 @@
 title: Contact
 sidebar_label: Contact
 description: Get in touch with the project maintainers.
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - Contact
   - GitHub
