--- a/docs/content/developer/iota-identity/explanations/about-alias-outputs.mdx
+++ b/docs/content/developer/iota-identity/explanations/about-alias-outputs.mdx
@@ -1,7 +1,7 @@
 ---
 title: Alias Outputs
 description: UTXO Alias Ouput
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - public keys
   - utxo
