--- a/docs/content/developer/iota-identity/explanations/decentralized-identifiers.mdx
+++ b/docs/content/developer/iota-identity/explanations/decentralized-identifiers.mdx
@@ -1,6 +1,6 @@
 ---
 description: The Decentralized Identifiers (DID) standard from W3C is the fundamental standard that supports the concept of a decentralized digital identity. Explore the basic aspects of the DID standard.
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
     - public keys
     - Method Specification
