--- a/docs/content/developer/iota-identity/glossary.mdx
+++ b/docs/content/developer/iota-identity/glossary.mdx
@@ -1,6 +1,6 @@
 ---
 description: Glossary for IOTA Identity, defines the terms used in this specification and throughout decentralized identifier infrastructure.
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - W3C
   - terminology
