--- a/docs/content/developer/iota-identity/how-tos/domain-linkage/create-and-verify.mdx
+++ b/docs/content/developer/iota-identity/how-tos/domain-linkage/create-and-verify.mdx
@@ -1,7 +1,7 @@
 ---
 description: How to link a domain and a DID
 sidebar_label: Create and Verify
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - well-known
   - domain linkage
