--- a/docs/content/developer/iota-identity/how-tos/verifiable-credentials/revocation.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-credentials/revocation.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_label: Revoke
 description: Explain how a VC can be revoked
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
     - verifiable
     - credentials
