--- a/docs/content/developer/iota-identity/how-tos/verifiable-presentations/create-and-validate.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-presentations/create-and-validate.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_label: Create and Validate
 description: Explain how a VP is created and verified
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - verifiable
   - presentations
