--- a/docs/content/developer/iota-identity/welcome.mdx
+++ b/docs/content/developer/iota-identity/welcome.mdx
@@ -1,6 +1,6 @@
 ---
 description: The most important concepts that developers will need to know to utilize IOTA Identity to its full potential.
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - Identity
   - guide
