--- a/docs/content/developer/iota-identity/workflow.mdx
+++ b/docs/content/developer/iota-identity/workflow.mdx
@@ -2,7 +2,7 @@
 title: Identity.rs workflow
 sidebar_label: Workflow
 description: Learn about the software development process of the IOTA Identity repository.
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - Workflow
   - Contribute
