--- a/docs/content/references/iota-identity/iota-did-method-spec.mdx
+++ b/docs/content/references/iota-identity/iota-did-method-spec.mdx
@@ -2,7 +2,7 @@
 title: IOTA DID Method Specification v1.0
 sidebar_label: DID Method
 description: How IOTA Identity implements the Decentralized Identifiers Standard on the IOTA Tangle.
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - DID
   - specs
