--- a/docs/content/references/iota-identity/overview.mdx
+++ b/docs/content/references/iota-identity/overview.mdx
@@ -2,7 +2,7 @@
 title: Specifications Overview
 sidebar_label: Overview
 description: Provide overview of the specifications
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - specifications
 ---
