--- a/docs/content/references/iota-identity/revocation-timeframe-2024.mdx
+++ b/docs/content/references/iota-identity/revocation-timeframe-2024.mdx
@@ -2,7 +2,7 @@
 title: Revocation Timeframe 2024
 sidebar_label: Revocation Timeframe 2024
 description: The specification for an embeddable time-based revocation method - `RevocationTimeframe2024`.
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - DID
   - specs
