--- a/docs/content/developer/iota-identity/contribute.mdx
+++ b/docs/content/developer/iota-identity/contribute.mdx
@@ -2,14 +2,14 @@
 title: Contribute to the project
 sidebar_label: Contribute
 description: Contribute to IOTA Identity by joining the Identity initiative, via the projects GitHub repository, documentation, or sharing your knowledge.
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
-  - Contribute
-  - GitHub
-  - Identity Initiative
-  - Documentation
-  - Discord
-  - reference
+- Contribute
+- GitHub
+- Identity Initiative
+- Documentation
+- Discord
+- reference
 ---
 
 **Thanks for thinking about contributing to the project! You can contribute using the following ways.**
