--- a/docs/content/developer/iota-identity/faq.mdx
+++ b/docs/content/developer/iota-identity/faq.mdx
@@ -2,7 +2,7 @@
 title: Frequently Asked Questions
 sidebar_label: FAQ
 description: Frequently Asked Question regarding IOTA Identity.
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - FAQ
   - Frequently Asked Question
