--- a/docs/content/developer/iota-identity/getting-started/rust.mdx
+++ b/docs/content/developer/iota-identity/getting-started/rust.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_label: Rust
 description: Getting started with the IOTA Identity Rust Library.
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - Rust
   - Identity
