--- a/docs/content/developer/iota-identity/getting-started/wasm.mdx
+++ b/docs/content/developer/iota-identity/getting-started/wasm.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_label: Wasm
 description: Getting started with the IOTA Identity WASM Library.
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
     - WASM
     - install
