--- a/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/delete.mdx
+++ b/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/delete.mdx
@@ -2,7 +2,7 @@
 title: Delete an IOTA Identity
 sidebar_label: Delete
 description: How to deactivate or destroy an IOTA Identity
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
     - Delete
     - Deactivate
