--- a/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/resolve.mdx
+++ b/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/resolve.mdx
@@ -2,7 +2,7 @@
 title: Resolve an IOTA Identity
 sidebar_label: Resolve
 description: Explain how resolving works including arguments
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
     - Resolve
 ---
