--- a/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/update.mdx
+++ b/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/update.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_label: Update
 description: How DID Documents can be manipulated and how updates should be published
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
     - Documents
     - DID
