--- a/docs/content/developer/iota-identity/how-tos/key-storage.mdx
+++ b/docs/content/developer/iota-identity/how-tos/key-storage.mdx
@@ -2,7 +2,7 @@
 title: Key Storage
 sidebar_label: Key Storage
 description: Explain the use of the storage interfaces and how they can be implemented
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - key storage
   - storage interfaces
