--- a/docs/content/developer/iota-identity/how-tos/verifiable-credentials/create.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-credentials/create.mdx
@@ -2,7 +2,7 @@
 title: Create a Verifiable Credential
 sidebar_label: Create and Sign
 description: Explain how a VC is created and verified
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - verifiable
   - credentials
