--- a/docs/content/developer/iota-identity/how-tos/verifiable-credentials/selective-disclosure.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-credentials/selective-disclosure.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_label: Selective Disclosure
 description: Explain VC with selective disclosure.
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - verifiable
   - credentials
