--- a/docs/content/developer/iota-identity/how-tos/verifiable-credentials/zero-knowledge-selective-disclosure.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-credentials/zero-knowledge-selective-disclosure.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_label: Zero Knowledge Selective Disclosure
 description: Zero Knowledge selectively disclosable VCs.
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - verifiable
   - credentials
