--- a/docs/content/references/iota-identity/revocation-bitmap-2022.mdx
+++ b/docs/content/references/iota-identity/revocation-bitmap-2022.mdx
@@ -2,7 +2,7 @@
 title: Revocation Bitmap
 sidebar_label: Revocation Bitmap
 description: The specification for the embedded revocation bitmap.
-image: /img/Identity_icon.png
+image: /img/identity/icon.png
 tags:
   - DID
   - specs
