fix(devx): typos

--- a/docs/content/developer/iota-identity/explanations/about-alias-outputs.mdx
+++ b/docs/content/developer/iota-identity/explanations/about-alias-outputs.mdx
@@ -1,6 +1,6 @@
 ---
 title: Alias Outputs
-description: UTXO Alias Ouput
+description: UTXO Alias Output
 image: /img/identity/icon.png
 tags:
   - public keys
@@ -26,7 +26,7 @@ and which can be transferred through transactions to update DID Documents.
 :::
 
 
-The IOTA DID method uses the IOTA ledger, which is baed on the unspent transaction output (_UTXO_) model,
+The IOTA DID method uses the IOTA ledger, which is based on the unspent transaction output (_UTXO_) model,
 as well as the features of the Stardust upgrade,
 which are fundamental to the IOTA DID method.
 
