Add Identity tags

--- a/docs/content/developer/iota-identity/explanations/about-alias-outputs.mdx
+++ b/docs/content/developer/iota-identity/explanations/about-alias-outputs.mdx
@@ -3,12 +3,9 @@ title: Alias Outputs
 description: UTXO Alias Output
 image: /img/identity/icon.png
 tags:
-  - public keys
-  - utxo
-  - Method Specification
-  - Decentralized Identifiers
-  - overview
-  - DLT
+  - explanation
+  - did
+  - getting-started
 ---
 
 # Alias Outputs
