--- a/docs/content/developer/iota-identity/explanations/decentralized-identifiers.mdx
+++ b/docs/content/developer/iota-identity/explanations/decentralized-identifiers.mdx
@@ -2,11 +2,11 @@
 description: The Decentralized Identifiers (DID) standard from W3C is the fundamental standard that supports the concept of a decentralized digital identity. Explore the basic aspects of the DID standard.
 image: /img/identity/icon.png
 tags:
-    - public keys
-    - Method Specification
-    - Decentralized Identifiers
-    - overview
-    - DLT
+    - explanation
+    - did
+    - getting-started
+    - verification-method
+    - verifiable-credentials
 ---
 
 # Decentralized Identifiers (DID)
