--- a/docs/content/developer/iota-identity/explanations/verifiable-credentials.mdx
+++ b/docs/content/developer/iota-identity/explanations/verifiable-credentials.mdx
@@ -2,9 +2,8 @@
 description: Verifiable credentials are statements about the holder. They can be verified online or in person, and the holder decides who to share them with.
 image: /img/identity/icon.png
 tags:
-  - verifiable
-  - credentials
-  - person
+  - explanation
+  - verifiable-credentials
 ---
 # Verifiable Credentials
 
