--- a/docs/content/developer/iota-identity/getting-started/rust.mdx
+++ b/docs/content/developer/iota-identity/getting-started/rust.mdx
@@ -3,8 +3,10 @@ sidebar_label: Rust
 description: Getting started with the IOTA Identity Rust Library.
 image: /img/identity/icon.png
 tags:
-  - Rust
-  - Identity
+  - rust
+  - setup
+  - install
+  - getting-started
 ---
 # Getting Started with Rust
 
