--- a/docs/content/developer/iota-identity/getting-started/wasm.mdx
+++ b/docs/content/developer/iota-identity/getting-started/wasm.mdx
@@ -3,13 +3,10 @@ sidebar_label: Wasm
 description: Getting started with the IOTA Identity WASM Library.
 image: /img/identity/icon.png
 tags:
-    - WASM
+    - wasm
+    - setup
     - install
-    - npm
-    - yarn
-    - build
-    - nodejs
-    - webpack
+    - getting-started
 ---
 
 # Getting Started with Wasm
