--- a/docs/content/developer/iota-identity/glossary.mdx
+++ b/docs/content/developer/iota-identity/glossary.mdx
@@ -2,11 +2,7 @@
 description: Glossary for IOTA Identity, defines the terms used in this specification and throughout decentralized identifier infrastructure.
 image: /img/identity/icon.png
 tags:
-  - W3C
-  - terminology
-  - IOTA
-  - verification method
-  - verifiable data registry
+  - verification-method
   - reference
 ---
 
