--- a/docs/content/developer/iota-identity/how-tos/domain-linkage/create-and-verify.mdx
+++ b/docs/content/developer/iota-identity/how-tos/domain-linkage/create-and-verify.mdx
@@ -3,10 +3,7 @@ description: How to link a domain and a DID
 sidebar_label: Create and Verify
 image: /img/identity/icon.png
 tags:
-  - well-known
-  - domain linkage
-  - DID Configuration Resource
-  - Domain Linkage Credential
+  - how-to
 ---
 
 import Tabs from '@theme/Tabs';
