--- a/docs/content/developer/iota-identity/how-tos/key-storage.mdx
+++ b/docs/content/developer/iota-identity/how-tos/key-storage.mdx
@@ -4,11 +4,7 @@ sidebar_label: Key Storage
 description: Explain the use of the storage interfaces and how they can be implemented
 image: /img/identity/icon.png
 tags:
-  - key storage
-  - storage interfaces
-  - json web key
-  - json web algorithm
-  - signing
+  - how-to
 ---
 
 import Tabs from '@theme/Tabs';
