--- a/docs/content/developer/iota-identity/how-tos/verifiable-credentials/revocation.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-credentials/revocation.mdx
@@ -3,10 +3,8 @@ sidebar_label: Revoke
 description: Explain how a VC can be revoked
 image: /img/identity/icon.png
 tags:
-    - verifiable
-    - credentials
-    - revoke
-    - revocation
+    - how-to
+    - verifiable-credentials
 ---
 
 import Tabs from '@theme/Tabs';
