--- a/docs/content/developer/iota-identity/how-tos/verifiable-credentials/zero-knowledge-selective-disclosure.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-credentials/zero-knowledge-selective-disclosure.mdx
@@ -3,10 +3,8 @@ sidebar_label: Zero Knowledge Selective Disclosure
 description: Zero Knowledge selectively disclosable VCs.
 image: /img/identity/icon.png
 tags:
-  - verifiable
-  - credentials
-  - Zero Knowledge
-  - Disclosure
+  - verifiable-credentials
+  - zk
 ---
 
 import Tabs from '@theme/Tabs';
