--- a/docs/content/references/iota-identity/iota-did-method-spec.mdx
+++ b/docs/content/references/iota-identity/iota-did-method-spec.mdx
@@ -4,12 +4,8 @@ sidebar_label: DID Method
 description: How IOTA Identity implements the Decentralized Identifiers Standard on the IOTA Tangle.
 image: /img/identity/icon.png
 tags:
-  - DID
-  - specs
-  - specifications
-  - Decentralized Identifiers
-  - Tangle
-  - format
+  - reference
+  - did
 ---
 
 # IOTA DID Method Specification v1.0
