--- a/docs/content/references/iota-identity/overview.mdx
+++ b/docs/content/references/iota-identity/overview.mdx
@@ -4,7 +4,7 @@ sidebar_label: Overview
 description: Provide overview of the specifications
 image: /img/identity/icon.png
 tags:
-  - specifications
+  - reference
 ---
 
 While IOTA Identity implements many existing standards, it also adds some additional features we would like to standardize ourselves. This section covers these features and how they work in great detail. These are not light reads and can be skipped.
