--- a/docs/content/references/iota-identity/revocation-bitmap-2022.mdx
+++ b/docs/content/references/iota-identity/revocation-bitmap-2022.mdx
@@ -4,11 +4,8 @@ sidebar_label: Revocation Bitmap
 description: The specification for the embedded revocation bitmap.
 image: /img/identity/icon.png
 tags:
-  - DID
-  - specs
-  - specifications
-  - revocation
-  - bitmap
+  - reference
+  - did
 ---
 
 # Revocation Bitmap 2022
