--- a/docs/content/references/iota-identity/revocation-timeframe-2024.mdx
+++ b/docs/content/references/iota-identity/revocation-timeframe-2024.mdx
@@ -4,11 +4,8 @@ sidebar_label: Revocation Timeframe 2024
 description: The specification for an embeddable time-based revocation method - `RevocationTimeframe2024`.
 image: /img/identity/icon.png
 tags:
-  - DID
-  - specs
-  - specifications
-  - revocation
-  - bitmap
+  - reference
+  - did
 ---
 
 # Revocation Timeframe 2024
