--- a/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/create.mdx
+++ b/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/create.mdx
@@ -4,11 +4,8 @@ sidebar_label: Create and Publish
 description: Create DID Documents and publish them to the Tangle
 image: /img/identity/icon.png
 tags:
-    - Documents
-    - DID
-    - Tangle
-    - Create
-    - Publish
+    - how-to
+    - did
 ---
 
 import Tabs from '@theme/Tabs';
