--- a/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/delete.mdx
+++ b/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/delete.mdx
@@ -4,9 +4,8 @@ sidebar_label: Delete
 description: How to deactivate or destroy an IOTA Identity
 image: /img/identity/icon.png
 tags:
-    - Delete
-    - Deactivate
-    - Destroy
+    - how-to
+    - did
 ---
 
 import Tabs from '@theme/Tabs';
