--- a/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/resolve.mdx
+++ b/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/resolve.mdx
@@ -4,7 +4,8 @@ sidebar_label: Resolve
 description: Explain how resolving works including arguments
 image: /img/identity/icon.png
 tags:
-    - Resolve
+    - how-to
+    - did
 ---
 
 import Tabs from '@theme/Tabs';
