--- a/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/update.mdx
+++ b/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/update.mdx
@@ -3,11 +3,8 @@ sidebar_label: Update
 description: How DID Documents can be manipulated and how updates should be published
 image: /img/identity/icon.png
 tags:
-    - Documents
-    - DID
-    - Tangle
-    - Update
-    - Publish
+    - how-to
+    - did
 ---
 
 import Tabs from '@theme/Tabs';
