--- a/docs/content/developer/iota-identity/how-tos/verifiable-credentials/create.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-credentials/create.mdx
@@ -4,10 +4,8 @@ sidebar_label: Create and Sign
 description: Explain how a VC is created and verified
 image: /img/identity/icon.png
 tags:
-  - verifiable
-  - credentials
-  - Create
-  - sign
+  - how-to
+  - verifiable-credentials
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
