--- a/docs/content/developer/iota-identity/how-tos/verifiable-credentials/selective-disclosure.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-credentials/selective-disclosure.mdx
@@ -3,10 +3,8 @@ sidebar_label: Selective Disclosure
 description: Explain VC with selective disclosure.
 image: /img/identity/icon.png
 tags:
-  - verifiable
-  - credentials
-  - SD-JWT
-  - Disclosure
+  - how-to
+  - verifiable-credentials
 ---
 
 import Tabs from '@theme/Tabs';
