--- a/docs/content/developer/iota-identity/how-tos/verifiable-presentations/create-and-validate.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-presentations/create-and-validate.mdx
@@ -3,8 +3,7 @@ sidebar_label: Create and Validate
 description: Explain how a VP is created and verified
 image: /img/identity/icon.png
 tags:
-  - verifiable
-  - presentations
+  - how-to
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
