Remove unreleated changes

--- a/docs/content/developer/iota-101/iota-move-concepts/packages/custom-policies.mdx
+++ b/docs/content/developer/iota-101/iota-move-concepts/packages/custom-policies.mdx
@@ -8,7 +8,7 @@ Protecting the ability to upgrade a package on chain using a single key can pose
 
 <UpgradeSingleKeyRisk />
 
-To address the security risk of single-key upgrade ownership poses while still providing the opportunity to [upgrade live packages](upgrade.mdx), IOTA offers _custom upgrade policies_. These policies protect `UpgradeCap` access and issue `UpgradeTicket` objects that authorize upgrades on a case-by-case basis.
+To address the security risk of single-key upgrade ownership poses while still providing the opportunity to [upgrade live packages](./upgrade.mdx), IOTA offers _custom upgrade policies_. These policies protect `UpgradeCap` access and issue `UpgradeTicket` objects that authorize upgrades on a case-by-case basis.
 
 ## Compatibility {#compatibility}
 
