--- a/docs/content/developer/standards/kiosk-apps.mdx
+++ b/docs/content/developer/standards/kiosk-apps.mdx
@@ -8,7 +8,7 @@ Kiosk apps are a way to extend the functionality of IOTA Kiosk while keeping the
 There are two types of apps:
 
 - [Basic apps](#basic-apps)
-- [Permissioned apps](#permissioned-apps-using-the-kiosk-apps-api-permissioned-apps)
+- [Permissioned apps](#permissioned-apps)
 
 ## Basic apps
 
