--- a/docs/content/operator/validator-config.mdx
+++ b/docs/content/operator/validator-config.mdx
@@ -9,7 +9,7 @@ Validators on the IOTA network run special nodes and have additional tasks and r
 
 ## Requirements to run a validator on IOTA 
 
-To run an IOTA validator, you must set up and configure an IOTA Validator node. After you have a running node, you must have a minimum of 30 million IOTA in your staking pool to join the validator set on the IOTA network.
+To run an IOTA validator, you must set up and configure an IOTA Validator node. After you have a running node, you must have a minimum of 2 million IOTA in your staking pool to join the validator set on the IOTA network.
 
 To learn how to set up and configure an IOTA Validator node, see [IOTA for Node Operators](https://github.com/iotaledger/iota/blob/main/nre/iota_for_node_operators.md) on GitHub. The guide includes all of the information you need to configure your Validator node. It also provides guidance on the tasks you must perform after you join the validator set.
 
@@ -41,7 +41,7 @@ The total voting power on IOTA is always 10,000, regardless of the amount staked
 
 ### User staking and withdrawals
 
-When users stake IOTA tokens, these IOTA objects are wrapped into StakedIOTA objects. The calculation to determine each user's relative ownership of the staking pool is done directly with the timestamp of the StakedIOTA object (which determines the moment at which the deposit took place) and the change in the exchange rates between the deposit epoch and the withdrawal epoch. Each staking pool's data structure contains a time series with that pool's exchange rates. These exchange rates can be used to determine the withdrawals of any of the pool's stakers.
+When users stake IOTA tokens, these IOTA objects are wrapped into `StakedIOTA` objects. The calculation to determine each user's relative ownership of the staking pool is done directly with the timestamp of the `StakedIOTA` object (which determines the moment at which the deposit took place) and the change in the exchange rates between the deposit epoch and the withdrawal epoch. Each staking pool's data structure contains a time series with that pool's exchange rates. These exchange rates can be used to determine the withdrawals of any of the pool's stakers.
 
 Stake withdrawals are processed immediately with the exchange rate prevailing at the previous epoch's exchange rate. Withdrawals do not have to wait for the current epoch to close. Withdrawals include both the original stake the user deposited and all the stake rewards accumulated up to the previous epoch. Stakers do not earn the rewards accruing to their stake during the epoch at which they withdraw. Since there is no way to know how many stake rewards will be accumulated during the current epoch until the epoch closes, these cannot be included in the withdrawal. Hence, any user can withdraw their stake immediately and receive:
 
