--- a/docs/content/developer/standards/coin.mdx
+++ b/docs/content/developer/standards/coin.mdx
@@ -176,13 +176,13 @@ let deny_list = ptb.obj(ObjectArg::SharedObject {
 let deny_cap = ptb.obj(ObjectArg::ImmOrOwnedObject(deny_cap))?;
 let address_to_ban = IotaAddress::from_str("0x...")?;
 let address_to_ban_arg = ptb.pure(address_to_ban)?;
-ptb.command(Command::move_call(
+ptb.programmable_move_call(
     IOTA_FRAMEWORK_PACKAGE_ID,
     Identifier::from(COIN_MODULE_NAME),
     Identifier::from_str("deny_list_add")?,
     vec![<otw-type>],
     vec![deny_list, deny_cap, address_to_ban_arg],
-));
+);
 
 let builder = ptb.finish();
 ```
