--- a/docs/content/developer/stardust/claiming/alias.mdx
+++ b/docs/content/developer/stardust/claiming/alias.mdx
@@ -4,7 +4,7 @@
 
 An address can own `AliasOutput` objects only if before the migration it was set as the Alias Governor Address. 
 In this case, the `AliasOutput` object is an owned object in the ledger and its owner is the Governor address.
-Such address can be directly controlled by a user or by another object (either an `Alias` or `Nft` object). For the latter use case, check the [`Claiming an Output unlockable by an Alias/Nft Address`](address-uc.mdx) example.
+Such address can be directly controlled by a user or by another object (either an `Alias` or `Nft` object). For the latter use case, check the [`Claiming an Output unlockable by an Alias/Nft Address`](address-unlock-condition.mdx) example.
 
 ## Claim of an Alias Output
 
