--- a/docs/content/developer/iota-identity/how-tos/verifiable-credentials/zero-knowledge-selective-disclosure.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-credentials/zero-knowledge-selective-disclosure.mdx
@@ -3,6 +3,7 @@ sidebar_label: Zero Knowledge Selective Disclosure
 description: Zero Knowledge selectively disclosable VCs.
 image: /img/identity/icon.png
 tags:
+  - how-to
   - verifiable-credentials
   - zk
 ---
