Add Identity tags

--- a/docs/content/developer/iota-identity/contribute.mdx
+++ b/docs/content/developer/iota-identity/contribute.mdx
@@ -5,6 +5,7 @@ description: Contribute to IOTA Identity by joining the Identity initiative, via
 image: /img/identity/icon.png
 tags:
   - reference
+  - identity
 ---
 
 **Thanks for thinking about contributing to the project! You can contribute using the following ways.**
