--- a/docs/content/developer/iota-identity/explanations/about-alias-outputs.mdx
+++ b/docs/content/developer/iota-identity/explanations/about-alias-outputs.mdx
@@ -4,6 +4,7 @@ description: UTXO Alias Output
 image: /img/identity/icon.png
 tags:
   - explanation
+  - identity
   - did
   - getting-started
 ---
