--- a/docs/content/developer/iota-identity/explanations/decentralized-identifiers.mdx
+++ b/docs/content/developer/iota-identity/explanations/decentralized-identifiers.mdx
@@ -3,6 +3,7 @@ description: The Decentralized Identifiers (DID) standard from W3C is the fundam
 image: /img/identity/icon.png
 tags:
     - explanation
+    - identity
     - did
     - getting-started
     - verification-method
