--- a/docs/content/developer/iota-identity/explanations/verifiable-presentations.mdx
+++ b/docs/content/developer/iota-identity/explanations/verifiable-presentations.mdx
@@ -1,3 +1,11 @@
+---
+description: Verifiable presentations are a way for a holder to present one or more verifiable credentials to a verifier.
+image: /img/identity/icon.png
+tags:
+  - explanation
+  - identity
+---
+
 # Verifiable Presentations
 
 A verifiable presentation is the recommended data format for sharing one or more [verifiable credentials](./verifiable-credentials.mdx).
