--- a/docs/content/developer/iota-identity/getting-started/wasm.mdx
+++ b/docs/content/developer/iota-identity/getting-started/wasm.mdx
@@ -3,6 +3,7 @@ sidebar_label: Wasm
 description: Getting started with the IOTA Identity WASM Library.
 image: /img/identity/icon.png
 tags:
+    - identity
     - wasm
     - setup
     - install
