--- a/docs/content/developer/iota-identity/glossary.mdx
+++ b/docs/content/developer/iota-identity/glossary.mdx
@@ -2,8 +2,9 @@
 description: Glossary for IOTA Identity, defines the terms used in this specification and throughout decentralized identifier infrastructure.
 image: /img/identity/icon.png
 tags:
-  - verification-method
   - reference
+  - identity
+  - verification-method
 ---
 
 # Glossary
