--- a/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/create.mdx
+++ b/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/create.mdx
@@ -5,6 +5,7 @@ description: Create DID Documents and publish them to the Tangle
 image: /img/identity/icon.png
 tags:
     - how-to
+    - identity
     - did
 ---
 
