--- a/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/update.mdx
+++ b/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/update.mdx
@@ -4,6 +4,7 @@ description: How DID Documents can be manipulated and how updates should be publ
 image: /img/identity/icon.png
 tags:
     - how-to
+    - identity
     - did
 ---
 
