--- a/docs/content/developer/iota-identity/how-tos/key-storage.mdx
+++ b/docs/content/developer/iota-identity/how-tos/key-storage.mdx
@@ -5,6 +5,7 @@ description: Explain the use of the storage interfaces and how they can be imple
 image: /img/identity/icon.png
 tags:
   - how-to
+  - identity
 ---
 
 import Tabs from '@theme/Tabs';
