--- a/docs/content/developer/iota-identity/how-tos/verifiable-credentials/create.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-credentials/create.mdx
@@ -5,6 +5,7 @@ description: Explain how a VC is created and verified
 image: /img/identity/icon.png
 tags:
   - how-to
+  - identity
   - verifiable-credentials
 ---
 import Tabs from '@theme/Tabs';
