--- a/docs/content/developer/iota-identity/how-tos/verifiable-credentials/selective-disclosure.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-credentials/selective-disclosure.mdx
@@ -4,6 +4,7 @@ description: Explain VC with selective disclosure.
 image: /img/identity/icon.png
 tags:
   - how-to
+  - identity
   - verifiable-credentials
 ---
 
