--- a/docs/content/developer/iota-identity/how-tos/verifiable-credentials/zero-knowledge-selective-disclosure.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-credentials/zero-knowledge-selective-disclosure.mdx
@@ -4,6 +4,7 @@ description: Zero Knowledge selectively disclosable VCs.
 image: /img/identity/icon.png
 tags:
   - how-to
+  - identity
   - verifiable-credentials
   - zk
 ---
