--- a/docs/content/developer/iota-identity/welcome.mdx
+++ b/docs/content/developer/iota-identity/welcome.mdx
@@ -3,6 +3,7 @@ description: The most important concepts that developers will need to know to ut
 image: /img/identity/icon.png
 tags:
   - reference
+  - identity
 ---
 # IOTA Identity Framework
 
