--- a/docs/content/developer/iota-identity/workflow.mdx
+++ b/docs/content/developer/iota-identity/workflow.mdx
@@ -3,6 +3,9 @@ title: Identity.rs workflow
 sidebar_label: Workflow
 description: Learn about the software development process of the IOTA Identity repository.
 image: /img/identity/icon.png
+tags:
+  - reference
+  - identity
 ---
 
 # Identity Workflow
