--- a/docs/content/references/iota-identity/iota-did-method-spec.mdx
+++ b/docs/content/references/iota-identity/iota-did-method-spec.mdx
@@ -5,6 +5,7 @@ description: How IOTA Identity implements the Decentralized Identifiers Standard
 image: /img/identity/icon.png
 tags:
   - reference
+  - identity
   - did
 ---
 
