--- a/docs/content/references/iota-identity/revocation-timeframe-2024.mdx
+++ b/docs/content/references/iota-identity/revocation-timeframe-2024.mdx
@@ -5,6 +5,7 @@ description: The specification for an embeddable time-based revocation method - 
 image: /img/identity/icon.png
 tags:
   - reference
+  - identity
   - did
 ---
 
