--- a/docs/content/developer/iota-identity/contact.mdx
+++ b/docs/content/developer/iota-identity/contact.mdx
@@ -3,6 +3,9 @@ title: Contact
 sidebar_label: Contact
 description: Get in touch with the project maintainers.
 image: /img/identity/icon.png
+tags:
+  - reference
+  - identity
 ---
 
 If you found a security related issue, please follow the [responsible disclosure policy](https://github.com/iotaledger/identity.rs/security/policy).
