--- a/docs/content/developer/iota-identity/explanations/verifiable-credentials.mdx
+++ b/docs/content/developer/iota-identity/explanations/verifiable-credentials.mdx
@@ -3,6 +3,7 @@ description: Verifiable credentials are statements about the holder. They can be
 image: /img/identity/icon.png
 tags:
   - explanation
+  - identity
   - verifiable-credentials
 ---
 # Verifiable Credentials
