--- a/docs/content/developer/iota-identity/faq.mdx
+++ b/docs/content/developer/iota-identity/faq.mdx
@@ -3,6 +3,9 @@ title: Frequently Asked Questions
 sidebar_label: FAQ
 description: Frequently Asked Question regarding IOTA Identity.
 image: /img/identity/icon.png
+tags:
+    - reference
+    - identity
 ---
 
 This page contains frequently asked questions regarding the Identity Library and Self-Sovereign Identity in general.
