--- a/docs/content/developer/iota-identity/getting-started/rust.mdx
+++ b/docs/content/developer/iota-identity/getting-started/rust.mdx
@@ -3,6 +3,7 @@ sidebar_label: Rust
 description: Getting started with the IOTA Identity Rust Library.
 image: /img/identity/icon.png
 tags:
+  - identity
   - rust
   - setup
   - install
