--- a/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/delete.mdx
+++ b/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/delete.mdx
@@ -5,6 +5,7 @@ description: How to deactivate or destroy an IOTA Identity
 image: /img/identity/icon.png
 tags:
     - how-to
+    - identity
     - did
 ---
 
