--- a/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/resolve.mdx
+++ b/docs/content/developer/iota-identity/how-tos/decentralized-identifiers/resolve.mdx
@@ -5,6 +5,7 @@ description: Explain how resolving works including arguments
 image: /img/identity/icon.png
 tags:
     - how-to
+    - identity
     - did
 ---
 
