--- a/docs/content/developer/iota-identity/how-tos/domain-linkage/create-and-verify.mdx
+++ b/docs/content/developer/iota-identity/how-tos/domain-linkage/create-and-verify.mdx
@@ -4,6 +4,7 @@ sidebar_label: Create and Verify
 image: /img/identity/icon.png
 tags:
   - how-to
+  - identity
 ---
 
 import Tabs from '@theme/Tabs';
