--- a/docs/content/developer/iota-identity/how-tos/verifiable-credentials/revocation.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-credentials/revocation.mdx
@@ -4,6 +4,7 @@ description: Explain how a VC can be revoked
 image: /img/identity/icon.png
 tags:
     - how-to
+    - identity
     - verifiable-credentials
 ---
 
