--- a/docs/content/developer/iota-identity/how-tos/verifiable-presentations/create-and-validate.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-presentations/create-and-validate.mdx
@@ -4,6 +4,7 @@ description: Explain how a VP is created and verified
 image: /img/identity/icon.png
 tags:
   - how-to
+  - identity
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
