--- a/docs/content/references/iota-identity/revocation-bitmap-2022.mdx
+++ b/docs/content/references/iota-identity/revocation-bitmap-2022.mdx
@@ -5,6 +5,7 @@ description: The specification for the embedded revocation bitmap.
 image: /img/identity/icon.png
 tags:
   - reference
+  - identity
   - did
 ---
 
